# bountyhound

./: .gitignore  .mcp.json  AGENT_UPDATE_REPORT.md  ARCHITECTURE_REVIEW.md  COMPLETION_REPORT.txt  HUNT_FLOW_DIAGRAM.txt  IMPLEMENTATION_SUMMARY.md  METHODOLOGY_GAPS_TODO.md  OPTIMIZED_FLOW_DIAGRAM.txt  OPTIMIZED_HUNT_ARCHITECTURE.md  OPTIMIZED_HUNT_DESIGN_v2.md  PROJECT_COMPLETION_SUMMARY.md  PROXY_ENGINE_SYSTEM.md  QUICKSTART.md  README.md  TASK_8_AUDIT_REPORT.md  TEST_REPORT.md  TOP50_HUNTER_REPORT.md  bountyhound-workflow.html  eval_review_no_refusal.html  find_rest_paths.py  grok-network2.txt  migrate_to_bountyhound_db.py  pyproject.toml  repatch.py  scrape_bbp_details.py  scrape_hackerone_bbp.py  scrape_hackerone_complete.py  scrape_hackerone_pagination.py  sync.py  trigger_evals_no_refusal.json  verify-mcp-setup.py
.claude-plugin/: marketplace.json
amass-claude/: api.py  main.py  mcp_server.py  models.py  requirements.txt  scanner.py  state.py
bh-core/: __init__.py  logger.py  mcp_base.py  models.py  persistence.py  requirements.txt  state.py
bloodhound-claude/: api.py  main.py  mcp_server.py  models.py  requirements.txt  scanner.py  state.py
bountyhound-agent/: .gitignore  ANALYSIS-REPORT.md  API-ABUSE-DETECTION-BYPASSER-SUMMARY.md  API-SECURITY-VALIDATOR-SUMMARY.md  AUTH_MANAGER_IMPLEMENTATION.md  AWS_MODULE_SUMMARY.md  CHANGELOG-2026-02-13.md  CLAUDE.md  COMPREHENSIVE-ANALYSIS.md  CORS-POLICY-ANALYZER-IMPLEMENTATION.md  FULL-IMPLEMENTATION-SUMMARY.md  GAP-ANALYSIS.md  GCP_MODULE_IMPLEMENTATION.md  GRAPHQL-ADVANCED-TESTER-SUMMARY.md  MISSING-COMPONENTS.md  (+21 more)
(+990 files in other folders)
